--- a/NeuronalMathematics/NeuronalMathematics.csproj
+++ b/NeuronalMathematics/NeuronalMathematics.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PersistantModel\PersistantModel.csproj">
+      <Project>{0a60b16c-0de7-42f7-b1ce-4dbf9df65632}</Project>
+      <Name>PersistantModel</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
