added equation interface modified persistant classes : added clone() function, moved empty constructor to protected. Assume the clone() function returns the correct class instance

--- a/PersistantModel/PersistantModel.csproj
+++ b/PersistantModel/PersistantModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Equal.cs" />
     <Compile Include="Multiplication.cs" />
     <Compile Include="Addition.cs" />
     <Compile Include="Arithmetic.cs" />
