--- a/Maths/Maths.csproj
+++ b/Maths/Maths.csproj
@@ -30,6 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -38,11 +40,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WpfMath">
+      <HintPath>..\packages\WpfMath.0.4.0\lib\net40\WpfMath.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Answer.cs" />
     <Compile Include="MathematicEquation.cs" />
     <Compile Include="GenericNeurone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Exercice.cs" />
+    <Compile Include="SequenceProof.cs" />
+    <Compile Include="Wording.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\Interfaces.csproj">
