implémentation d'une technique de mémoïsation par calcul d'un poids relatif aux équations. Avantage : tous les objets groupés forment un graphe orienté et chaque noeud n'est représenté qu'une seule fois

--- a/Maths/Maths.csproj
+++ b/Maths/Maths.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Answer.cs" />
+    <Compile Include="Applicatifs.cs" />
     <Compile Include="MathematicEquation.cs" />
     <Compile Include="GenericNeurone.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
