This version terminates weight implementation for unique objects of arithmetic equation. Each object are revealed to a unique element if any other element is equal to its; Weight keeps tracks of hashcode; that hashcodes are stored into the serialized files to retreive them identically.

--- a/PersistantModel/PersistantModel.csproj
+++ b/PersistantModel/PersistantModel.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Term.cs" />
     <Compile Include="TopLevelArithmeticModel.cs" />
     <Compile Include="UnknownTerm.cs" />
+    <Compile Include="Verify.cs" />
     <Compile Include="Weight.cs" />
   </ItemGroup>
   <ItemGroup>
