modifs pour mettre au point une zone d'enregistrement des données pour sectoriser les équations tout en contrôlant le calcul des équations

--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -44,6 +44,7 @@
     <Compile Include="IEquation.cs" />
     <Compile Include="INeurone.cs" />
     <Compile Include="INeuroneType.cs" />
+    <Compile Include="IVariable.cs" />
     <Compile Include="IWeight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
