--- a/Maths/Maths.csproj
+++ b/Maths/Maths.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exercice.cs" />
     <Compile Include="SequenceProof.cs" />
+    <Compile Include="TopLevelArithmeticModel.cs" />
     <Compile Include="Wording.cs" />
   </ItemGroup>
   <ItemGroup>
