modifs : added a Gathering function to cover all objects by a graph

--- a/PersistantModel/PersistantModel.csproj
+++ b/PersistantModel/PersistantModel.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Gathering.cs" />
     <Compile Include="RecordZone.cs" />
     <Compile Include="Texte.cs" />
     <Compile Include="UnaryOperation.cs" />
