--- a/NeuronalMathematics/packages.config
+++ b/NeuronalMathematics/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SHFB" version="2014.5.31" targetFramework="net452" />
   <package id="WpfMath" version="0.4.0" targetFramework="net452" />
 </packages>
