--- a/Interfaces/Interfaces.csproj
+++ b/Interfaces/Interfaces.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IArithmetic.cs" />
+    <Compile Include="IDocument.cs" />
     <Compile Include="IEquation.cs" />
     <Compile Include="INeurone.cs" />
     <Compile Include="INeuroneType.cs" />
