--- a/NeuralMathematics/NeuralMathematics.csproj
+++ b/NeuralMathematics/NeuralMathematics.csproj
@@ -100,6 +100,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Applicatif.cs" />
     <Compile Include="Tracer.xaml.cs">
       <DependentUpon>Tracer.xaml</DependentUpon>
     </Compile>
