added expression to parse string into Arithemtic object parenthese and brackets are kept identically

--- a/NeuralMathematics/NeuralMathematics.csproj
+++ b/NeuralMathematics/NeuralMathematics.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Graphique.xaml.cs">
       <DependentUpon>Graphique.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Polynome2.cs" />
     <Compile Include="Tracer.xaml.cs">
       <DependentUpon>Tracer.xaml</DependentUpon>
     </Compile>
