numeric solution added Expression class to create arithmetic object from parsing string content

--- a/NeuralMathematics/NeuralMathematics.csproj
+++ b/NeuralMathematics/NeuralMathematics.csproj
@@ -105,6 +105,7 @@
       <DependentUpon>Graphique.xaml</DependentUpon>
     </Compile>
     <Compile Include="Polynome2.cs" />
+    <Compile Include="Polynome3.cs" />
     <Compile Include="Tracer.xaml.cs">
       <DependentUpon>Tracer.xaml</DependentUpon>
     </Compile>
