added GrobnerPolynom numeric resolution poly 2 ok added pascal triangle

--- a/NeuralMathematics/NeuralMathematics.csproj
+++ b/NeuralMathematics/NeuralMathematics.csproj
@@ -106,6 +106,7 @@
     </Compile>
     <Compile Include="Polynome2.cs" />
     <Compile Include="Polynome3.cs" />
+    <Compile Include="GrobnerPolynome.cs" />
     <Compile Include="Tracer.xaml.cs">
       <DependentUpon>Tracer.xaml</DependentUpon>
     </Compile>
