--- a/PersistantModel/PersistantModel.csproj
+++ b/PersistantModel/PersistantModel.csproj
@@ -68,6 +68,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base.cs" />
     <Compile Include="Expression.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Function.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Product.cs" />
     <Compile Include="Sum.cs" />
     <Compile Include="Term.cs" />
+    <Compile Include="UniqueStrings.cs" />
     <Compile Include="UnknownTerm.cs" />
     <Compile Include="Verify.cs" />
     <Compile Include="Weight.cs" />
